<resources>
    <string name="app_name">parkingfinder</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="first_name">First Name</string>
    <string name="registration">Registration</string>
    <string name="email">Email Address</string>
    <string name="rego">Vehicle Registration</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="not_registered">not registered</string>
    <string name="register">register</string>
    <string name="already_registered">already registered</string>
    <string name="options_menu">Options Menu</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="input_error_name">Please enter a valid name</string>
    <string name="input_error_email">Please enter a valid email address</string>
    <string name="input_error_password">Please enter a valid password</string>
    <string name="input_error_password_length">Password needs to be at least 6 characters</string>
    <string name="input_error_rego">Please enter a valid vehicle registration</string>
    <string name="registration_success">Registration Successful!</string>
    <string name="BookingDate">booking date</string>
    <string name="address">Address</string>
    <string name="leaser">Leaser</string>
    <string name="title_activity_map">Map</string>
    <string name="search">Search Parking Listings</string>
    <string name="google_maps_api_key">AIzaSyCmKBH-rB0ZT4bISv_KwqGJkBfwvCPTktk</string>


    <!-- Intent extras -->
    <string name="intent_parking_listings">intent_listings</string>
    <string name="intent_location_list">intent_location_list</string>
    <string name="intent_user_locations">intent_user_locations</string>
    <string name="intent_location">intent_location</string>

    <!-- Firestore Strings -->
    <string name="collection_leasers">User</string>
    <string name="collection_users">User</string>
    <string name="collection_rego">Registration</string>
    <string name="collection_parking_listings">Listing</string>
    <string name="collection_parking_bookings">Booking</string>
    <string name="user">user</string>
    <string name="location">Location</string>
    <string name="no_address_found">No known address</string>
    <string name="address_found">Address found</string>
    <string name="invalid_lat_long_used">Latitude is invalid</string>
    <string name="service_not_available">invalid service request</string>
    <string name="logout">Logout</string>
    <string name="book">Book Selected Parking Space</string>

    <string name="action_sign_in_short">Register</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or register</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Let me login</string>
    <string name="btn_sign_out">Logout</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="auth_success">Successful Login, Welcome!</string>
    <string name="confirm">Confirm?</string>
    <string name="addlisting">Add Listing</string>
    <string name="availability">Availability</string>
</resources>
