<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.pp1.parkingfinder.view.RegistrationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="549dp">

        <RelativeLayout
            android:layout_width="333dp"
            android:layout_height="84dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="465dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="134dp"
                app:srcCompat="@drawable/logo" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="383dp"
            android:layout_height="402dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="60dp">

            <EditText
                android:id="@+id/edittext_email"
                android:layout_width="206dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="68dp"
                android:layout_marginEnd="85dp"
                android:background="#ffffff"
                android:drawableLeft="@drawable/email"
                android:hint="@string/email"
                android:paddingLeft="2dp" />

            <EditText
                android:id="@+id/edittext_password"
                android:layout_width="206dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="121dp"
                android:layout_marginEnd="85dp"
                android:layout_marginBottom="306dp"
                android:background="#ffffff"
                android:drawableLeft="@drawable/password"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/edittext_cnf_password"
                android:layout_width="206dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="178dp"
                android:layout_marginEnd="85dp"
                android:background="#ffffff"
                android:drawableLeft="@drawable/password"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/edittext_firstname"
                android:layout_width="206dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="230dp"
                android:layout_marginEnd="85dp"
                android:background="#ffffff"
                android:hint="@string/firstname" />

            <EditText
                android:id="@+id/edittext_lastname"
                android:layout_width="206dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="281dp"
                android:layout_marginEnd="85dp"
                android:background="#ffffff"
                android:hint="@string/lastname" />

            <EditText
                android:id="@+id/edittext_rego"
                android:layout_width="206dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="333dp"
                android:layout_marginEnd="85dp"
                android:background="#ffffff"
                android:hint="@string/rego" />

            <CheckBox
                android:id="@+id/checkbox_isleaser"
                android:layout_width="98dp"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="192dp"
                android:layout_marginBottom="14dp"
                android:background="@color/AliceBlue"
                android:checked="false"
                android:text="Leaser?" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="147dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="38dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="193dp"
            android:layout_marginBottom="61dp"
            android:text="@string/already_registered"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="148dp"
            android:layout_marginBottom="61dp"
            android:paddingLeft="10dp"
            android:text="@string/login"
            android:textColor="#04ea00"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="102dp"
            android:background="#04ea00"
            android:text="@string/register"
            android:textColor="#ffffff" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="186dp"
            android:layout_marginBottom="9dp" />

    </RelativeLayout>

</RelativeLayout>