<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.pp1.parkingfinder.view.SearchListingActivity">

    <EditText
        android:id="@+id/editTextLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
        android:hint="@string/location"
        android:inputType="text" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="91dp"
        android:endYear="2100"
        android:headerBackground="@color/CadetBlue"
        android:paddingLeft="10dp"
        android:startYear="1900"></DatePicker>

    <Button
        android:id="@+id/btBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book" />

    <ListView
        android:id="@+id/listViewParkingListings"
        android:layout_width="wrap_content"
        android:layout_height="190dp"
        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"></ListView>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="206dp"
        tools:context=".MapsActivity" />


    <ScrollView
        android:layout_width="371dp"
        android:layout_height="96dp"
        android:verticalScrollbarPosition="right">

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/Chartreuse"
                android:text="@string/logout"></Button>

            <Button
                android:id="@+id/btMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/Chartreuse"
                android:text="@string/options_menu"></Button>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"></LinearLayout>

</LinearLayout>