<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.pp1.parkingfinder.view.RegistrationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="549dp">

        <RelativeLayout
            android:layout_width="333dp"
            android:layout_height="84dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="465dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="134dp"
                app:srcCompat="@drawable/logo" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="284dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="178dp">

            <EditText
                android:id="@+id/edittext_address"
                android:layout_width="206dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="95dp"
                android:layout_marginEnd="85dp"
                android:background="#ffffff"
                android:hint="@string/address" />

            <EditText
                android:id="@+id/edittext_availability"
                android:layout_width="206dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="166dp"
                android:layout_marginEnd="85dp"
                android:background="#ffffff"
                android:hint="@string/availability" />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="383dp"
        android:layout_height="290dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="41dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btLogout"
            android:layout_width="114dp"
            android:layout_height="59dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="247dp"
            android:layout_marginBottom="72dp"
            android:layout_weight="1"
            android:background="#04ea00"
            android:text="@string/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"></Button>

        <Button
            android:id="@+id/btMenu"
            android:layout_width="114dp"
            android:layout_height="59dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="49dp"
            android:layout_marginBottom="69dp"
            android:layout_weight="1"
            android:background="#04ea00"
            android:text="@string/options_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"></Button>

        <Button
            android:id="@+id/bt_addlisting"
            android:layout_width="194dp"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="102dp"
            android:background="#04ea00"
            android:text="@string/addlisting"
            android:textColor="@color/Black" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="186dp"
            android:layout_marginBottom="9dp" />

    </RelativeLayout>

</RelativeLayout>